k8s/microservice1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
      - name: microservice1
        image: prajwalsd/microservice1:latest   # Change if required
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: microservice1-service
spec:
  selector:
    app: microservice1
  ports:
  - port: 5000
    targetPort: 5000
