k8s/microservice2svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice2
spec:
  selector:
    app: microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
