k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-flask-app-service
            port:
              number: 5000
      - path: /prajwal
        pathType: Prefix
        backend:
          service:
            name: docker-flask2-service
            port:
              number: 5001
